# Aurora-Swarm

./: CLAUDE.md  README.md  pyproject.toml
ChiSim/: ChiSim-LLM-Design.md  ChiSim-LLM-Scaling.md
aurora_swarm/: pool.py  vllm_pool.py
docs/: api.rst
docs/SwarmSim/: SwarmSim-Architecture.md  SwarmSim-ChiSim-Integration.md  SwarmSim-Design.md  SwarmSim-Ensembles.md  SwarmSim-Overview.md  SwarmSim-Scaling-Slides.md  SwarmSim-Scaling.md
docs/_build/: api.html  context_length.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: api.doctree  environment.pickle  index.doctree
docs/_build/_modules/: index.html
docs/_build/_modules/aurora_swarm/: pool.html  vllm_pool.html
docs/_build/_modules/aurora_swarm/patterns/: tree_reduce.html
docs/_build/_sources/: index.rst.txt
examples/: blackboard.sh  blackboard_example.py  broadcast_aggregators.sh  scatter_gather_coli.sh  tree_reduce_coli.py  tree_reduce_coli.sh
getting_started/: create_vllm_pool.py  create_vllm_pool.sh  create_vllm_subpools.py
prompts/: nmnat2_peptide_inhibitors.txt
scripts/: count_sockets.py  repro_vllm_subpool_client_mismatch.py  submit_oss120b.sh
swarmsim/: CHANGELOG.md  README.md  __init__.py  behavioral_state.py  communication.py  coordinator.py  disease_engine.py  ideas.md  memory.py  models.py  population.py  prompt.py  run_pilot.py  schedules.py  sim_config.py  worker.py
tests/: test_blackboard_example_helpers.py  test_vllm_pool.py
