[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aurora-swarm"
version = "0.1.0"
description = "Communication patterns for orchestrating large-scale LLM agent swarms on Aurora"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
plot = [
    "matplotlib>=3.5",
]
docs = [
    "sphinx>=7.0",
    "sphinx-autodoc-typehints>=2.0",
]

[tool.setuptools.packages.find]
include = ["aurora_swarm*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
